Added list view and detail view for music and genre

--- a/greedygame/music_app/templates/musictrack_detail.html
+++ b/greedygame/music_app/templates/musictrack_detail.html
@@ -2,6 +2,6 @@
 <p>Rating:{{ object.rating }}</p>
 {% for gen in Genre %}
             <tr>
-               gen.genre_name
+            <p> Genre: {{  gen.genre_name }}</p>
             </tr>
         {% endfor %}
