--- a/greedygame/music_app/templates/musictrack_detail.html
+++ b/greedygame/music_app/templates/musictrack_detail.html
@@ -1,7 +1,9 @@
 <h1>{{ object.title }}</h1>
 <p>Rating:{{ object.rating }}</p>
-{% for gen in Genre %}
+{% for genre in Genre %}
             <tr>
-            <p> Genre: {{  gen.genre_name }}</p>
+            {% for gst in genre %}
+            <p> Genre: {{  gst.genre_name }}</p>
+            {% endfor %}
             </tr>
         {% endfor %}
