--- a/greedygame/music_app/templates/musicgenre_list.html
+++ b/greedygame/music_app/templates/musicgenre_list.html
@@ -1,8 +1,28 @@
-
-
+<style type="text/css">
+    table{
+        border: 4px solid grey; border-collapse: collapse; padding: 10px;
+    }
+    tr{
+        border: 2px solid grey; border-collapse: collapse; padding: 30px;
+    }
+    td{
+        font-size:20px; font-family: Lato; color: #000000;
+    }
+    .add{
+        padding-left:20%;
+    }
+  </style>
+<div style="margin-left:40%;">
 {% block content %}
     <h2>Music Genres</h2>
+    <form type="get" action=".">
+    <input  id="searchbox" type="text" name="search"  placeholder="Search..." >
+    <button id="search_submit" type="submit" >Submit</button>
+</form>
     <table>
+    <th>
+        Genres
+    </th>
         {% for genre in musicgenres_list %}
             <tr>
                 <td>
@@ -11,4 +31,6 @@
             </tr>
         {% endfor %}
     </table>
+    <a href="/music/genres/addgenre" class ="add">Add a Genre</a>
 {% endblock %}
+</div>
