--- a/greedygame/music_app/templates/musictrack_list.html
+++ b/greedygame/music_app/templates/musictrack_list.html
@@ -1,35 +1,57 @@
+<style type="text/css">
+    table{
+        border: 4px solid grey; border-collapse: collapse; padding: 10px;
+    }
+    tr{
+        border: 2px solid grey; border-collapse: collapse; padding: 30px;
+    }
+    td{
+        font-size:20px; font-family: Lato; color: #000000;
+    }
+    .add{
+        padding-left:20%;
+    }
+  </style>
 
+
+<div style="margin-left:40%;">
 {% block content %}
     <h2>Music Tracks</h2>
-    <form type="get" action="." style="margin: 0">
+    <form type="get" action=".">
     <input  id="searchbox" type="text" name="searchbox"  placeholder="Search..." >
     <button id="search_submit" type="submit" >Submit</button>
 </form>
+    <br>
     <table>
+    <th>
+        Tracks
+    </th>
         {% for track in musictracks_list %}
             <tr>
-                <td>
-                    <a href="/music/tracks/{{ track.track_id }}/">{{ track.title }}</a>
-                </td>
-                <td>
-                    {{ track.rating }}
+                <td >
+                    <a href="/music/tracks/{{ track.track_id }}/">
+                        {{ track.title }}
+                    </a>
                 </td>
             </tr>
         {% endfor %}
     </table>
+    <a href="/music/tracks/addtrack" class ="add"> Add a track</a>
+    <br>
     {% if is_paginated %}
         <div class="pagination">
             <span class="page-links">
                 {% if page_obj.has_previous %}
-                    <a href="/music/tracks?page={{ page_obj.previous_page_number }}">previous</a>
+                    <a href="/music/tracks?page={{ page_obj.previous_page_number }}">Previous</a>
                 {% endif %}
                 <span class="page-current">
                     Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
                 </span>
                 {% if page_obj.has_next %}
-                    <a href="/music/tracks?page={{ page_obj.next_page_number }}">next</a>
+                    <a href="/music/tracks?page={{ page_obj.next_page_number }}">Next</a>
                 {% endif %}
             </span>
         </div>
     {% endif %}
 {% endblock %}
+</div>
