--- a/greedygame/music_app/templates/musictrack_list.html
+++ b/greedygame/music_app/templates/musictrack_list.html
@@ -1,6 +1,6 @@
 <style type="text/css">
     table{
-        border: 4px solid grey; border-collapse: collapse; padding: 10px;
+        border: 4px solid grey !important;
     }
     tr{
         border: 2px solid grey; border-collapse: collapse; padding: 30px;
@@ -8,6 +8,12 @@
     td{
         font-size:20px; font-family: Lato; color: #000000;
     }
+    table, th, td {
+    border: 1px solid grey;
+    border-collapse: collapse;
+    font-family: Lato;
+    padding: 10px;
+}
     .add{
         padding-left:20%;
     }
@@ -19,12 +25,15 @@
     <h2>Music Tracks</h2>
     <form type="get" action=".">
     <input  id="searchbox" type="text" name="searchbox"  placeholder="Search..." >
-    <button id="search_submit" type="submit" >Submit</button>
+    <button id="search_submit" type="submit" >Search</button>
 </form>
     <br>
     <table>
     <th>
         Tracks
+    </th>
+    <th>
+
     </th>
         {% for track in musictracks_list %}
             <tr>
@@ -33,6 +42,11 @@
                         {{ track.title }}
                     </a>
                 </td>
+            <td>
+                <a href="/music/tracks/edit/{{ track.track_id }}/">
+                       Edit
+                    </a>
+            </td>
             </tr>
         {% endfor %}
     </table>
